--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -1,9 +1,9 @@
 name: Generate GitHub Stats (Local)
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: "0 0 * * *"
-  workflow_dispatch:
 
 jobs:
   build:
@@ -11,16 +11,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Generate GitHub profile summary cards
+      - name: Generate profile summary cards
         uses: vn7n24fzkq/github-profile-summary-cards@release
         with:
           USERNAME: Mr-Priyanshu-Gupta
-          THEME: tokyonight
-
-      - name: Push stats to stats branch
-        uses: crazy-max/ghaction-github-pages@v3
-        with:
-          target_branch: stats
-          build_dir: profile-summary-card-output
+          AUTO_PUSH: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
