--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           github_user_name: Mr-Priyanshu-Gupta
           outputs: |
-            dist/pacman.svg
+            dist/pacman.svg?color_snake=yellow&color_dots=#2f2f2f
             dist/pacman-dark.svg?palette=github-dark&color_snake=yellow
 
       - name: Push to output branch
