Update cron schedule for GitHub Streak workflow

--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -2,7 +2,7 @@ name: Generate GitHub Streak
 
 on:
   schedule:
-    - cron: "0 0 * * *"   # runs daily at 00:00 UTC
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
